# i18n-gpt

./: README.md  pyproject.toml
examples/locale/en_US/: django.po  thes.po  translations.json
examples/locale/zh_Hans/: django.po
src/: dumper.py  main.py
tests/: test_main.py
